--- a/README
+++ b/README
@@ -2,7 +2,8 @@ Various training data files for Tesseract OCR (version 3.00+)
 
 * dan-frak/: Danish written in fraktur script (orthography prior to ca. 1867).
 * deu-frak/: German written in fraktur script.
-* swe-frak/: Swedish written in fraktur script.
+* swe-frak/: Swedish written in fraktur script. The wordlists for Swedish are from 
+Projekt Runeberg, http://runeberg.org/words/
 * dan/: slightly manipulated version of the Danish .traineddata shipped with upstream tesseract
 to not output annoying fi- and fl-ligatures all the time.
 
