--- a/README
+++ b/README
@@ -8,4 +8,6 @@ Projekt Runeberg, http://runeberg.org/words/
 to not output annoying fi- and fl-ligatures all the time.
 
 The *-frak/ directories have a primitive script to compile the data files that only works on
-unix-like machines.
+unix-like machines. If you aren't interested in working on training tesseract yourself, just
+find the *.traineddata that is relevant for your language, save it to your tesseract
+installation's data directory and you should be ready for ocr.
